--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
 		<!-- Put all css srcs here. -->
 		<link rel='stylesheet' href='style.css' type='text/css' />
 		<!-- Put all javascript srcs here. -->
+		<script type='text/javascript' src='javascript/main.js'></script>
+		<script type='text/javascript' src='javascript/Vector2D.js'></script>
+		<script type='text/javascript' src='javascript/context-functions.js'></script>
 		<script type='text/javascript' src='javascript/agent.js'></script>
 		<title>Disease</title>
 	</head>
