--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<link rel='stylesheet' href='style.css' type='text/css' />
 		<!-- Put all javascript srcs here. -->
 		<script type='text/javascript' src='javascript/agent.js'></script>
+		<script type='text/javascript' src='javascript/main.js'></script>
 		<title>Disease</title>
 	</head>
 	<body>
