--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<script type='text/javascript' src='javascript/Vector2D.js'></script>
 		<script type='text/javascript' src='javascript/input.js'></script>
 		<script type='text/javascript' src='javascript/context-functions.js'></script>
-		<script type='text/javascript' src='javascript/agent.js'></script>
+		<script type='text/javascript' src='javascript/Agent.js'></script>
 		<script type='text/javascript' src='javascript/main.js'></script>
 		<title>Disease</title>
 	</head>
