--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 	<head>
 		<meta http-equiv='content-type' content='text/html; charset=utf-8' />
 		<!-- Put all resource links here. -->
-		<link href='/resources/map.png' type='image/png' />
+		<link href='resources/map.png' type='image/png' />
 		<!-- Put all CSS sources here. -->
-		<link rel='stylesheet' href='/style.css' type='text/css' />
+		<link rel='stylesheet' href='style.css' type='text/css' />
 		<!-- Put all JavaScript sources here. -->
-		<script type='text/javascript' src='/javascript/Vector2D.js'></script>
-		<script type='text/javascript' src='/javascript/input.js'></script>
-		<script type='text/javascript' src='/javascript/context-functions.js'></script>
-		<script type='text/javascript' src='/javascript/Agent.js'></script>
-		<script type='text/javascript' src='/javascript/main.js'></script>
+		<script type='text/javascript' src='javascript/Vector2D.js'></script>
+		<script type='text/javascript' src='javascript/input.js'></script>
+		<script type='text/javascript' src='javascript/context-functions.js'></script>
+		<script type='text/javascript' src='javascript/Agent.js'></script>
+		<script type='text/javascript' src='javascript/main.js'></script>
 		<title>Disease</title>
 	</head>
 	<body>
