--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 		<script type='text/javascript' src='javascript/input.js'></script>
 		<script type='text/javascript' src='javascript/context-functions.js'></script>
 		<script type='text/javascript' src='javascript/Agent.js'></script>
+		<script type='text/javascript' src='javascript/GameController.js'></script>
 		<script type='text/javascript' src='javascript/main.js'></script>
 		<title>Disease</title>
 	</head>
