--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
 		<title>Disease</title>
 	</head>
 	<body>
-		<canvas id='canvas'></canvas>
+		<canvas id='canvas' class='center'></canvas>
 	</body>
 </html>
