--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 		<title>Disease</title>
 	</head>
 	<body>
-		<canvas id='canvas' class='center'></canvas>
+		<div class='center'>
+			<canvas id='canvas'></canvas>
+		</div>
 	</body>
 </html>
