--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 		<script type='text/javascript' src='javascript/context-functions.js'></script>
 		<script type='text/javascript' src='javascript/Agent.js'></script>
 		<script type='text/javascript' src='javascript/GameController.js'></script>
+		<script type='text/javascript' src='resources/conversion.js'></script>
 		<script type='text/javascript' src='javascript/main.js'></script>
 		<title>Disease</title>
 	</head>
