--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
 	<head>
 		<meta http-equiv='content-type' content='text/html; charset=utf-8' />
+		<!-- Libraries -->
+		<script src="jquery-3.2.1.min.js"></script>
 		<!-- Put all CSS sources here. -->
 		<link rel='stylesheet' href='style.css' type='text/css' />
 		<!-- Put all JavaScript sources here. -->
