--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<meta http-equiv='content-type' content='text/html; charset=utf-8' />
 		<!-- Libraries -->
 		<script src="jquery-3.2.1.min.js"></script>
+		<script src="jquery-csv.js"></script>
 		<!-- Put all CSS sources here. -->
 		<link rel='stylesheet' href='style.css' type='text/css' />
 		<!-- Put all JavaScript sources here. -->
