--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 		<!-- Libraries -->
 		<script src="jquery-3.2.1.min.js"></script>
 		<script src="jquery-csv.js"></script>
+		<script type='text/javascript' src='resources/papaparse.min.js'></script>
+		<script type='text/javascript' src='resources/conversion.js'></script>
 		<!-- Put all CSS sources here. -->
 		<link rel='stylesheet' href='style.css' type='text/css' />
 		<!-- Put all JavaScript sources here. -->
@@ -12,9 +14,8 @@
 		<script type='text/javascript' src='javascript/input.js'></script>
 		<script type='text/javascript' src='javascript/context-functions.js'></script>
 		<script type='text/javascript' src='javascript/Agent.js'></script>
+		<script type='text/javascript' src='javascript/City.js'></script>
 		<script type='text/javascript' src='javascript/GameController.js'></script>
-		<script type='text/javascript' src='javascript/papaparse.min.js'></script>
-		<script type='text/javascript' src='resources/conversion.js'></script>
 		<script type='text/javascript' src='javascript/main.js'></script>
 		<title>Disease</title>
 	</head>
