--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta http-equiv='content-type' content='text/html; charset=utf-8' />
 		<!-- Libraries -->
-		<script type='text/javascript' src='resources/papaparse.min.js'></script>
+		<script type='text/javascript' src='resources/reader.js'></script>
 		<script type='text/javascript' src='resources/conversion.js'></script>
 		<!-- Put all CSS sources here. -->
 		<link rel='stylesheet' href='style.css' type='text/css' />
