Include Airline.js

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 		<script type='text/javascript' src='javascript/input.js'></script>
 		<script type='text/javascript' src='javascript/context-functions.js'></script>
 		<script type='text/javascript' src='javascript/Agent.js'></script>
+		<script type='text/javascript' src='javascript/Airline.js'></script>
 		<script type='text/javascript' src='javascript/City.js'></script>
 		<script type='text/javascript' src='javascript/GameController.js'></script>
 		<script type='text/javascript' src='javascript/main.js'></script>
