--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 	</head>
 	<body>
 		<canvas id='canvas'></canvas>
+		<div id='message'>it works!</div>
 		<div id='bottom'></div>
 	</body>
 </html>
