--- a/index.html
+++ b/index.html
@@ -20,7 +20,11 @@
 	</head>
 	<body>
 		<canvas id='canvas'></canvas>
-		<div id='message'>it works!</div>
-		<div id='bottom'></div>
+		<div id='control-panel'>
+			
+		</div>
+		<div id='info-panel'>
+			<p id='global-stats'></p>
+		</div>
 	</body>
 </html>
