--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 			<input id="infectiousness" placeholder="Infectiousness (0-1)"></input>
 			<input id="recovery-number" placeholder="Average days to recovery"></input>
 			<input id="recovered-protection" placeholder="Relative chance recovered agents are infected (0-1)"></input>
+			<button id="apply" onclick="GC.controlPanel();">Apply Changes</button>
 		</div>
 	</body>
 </html>
