Fix: element name

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 		<div id='control-panel'>
 			<h3>Control Panel</h3>
 			<button id="reset" onclick="GC.cities = []; GC.initCities();">Reset</button>
-			<input id="agent-count">Agents to Simulate</button>
+			<input id="agent-count">Agents to Simulate</input>
 			<input id="infectiousness" placeholder="Infectiousness: Chance to infect interactions (0-1)"></input>
 			<input id="deadlyness" placeholder="Deadlyness: Chance per day of death for infected agents."></input>
 			<input id="recovered-protection" placeholder="Recovered protection: Relative chance recovered agents are infected (0-1)"></input>
