--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
 			<h3>Control Panel</h3>
 			<button id="reset" onclick="GC.cities = []; GC.initCities();">Reset</button>
 			<input id="agent-count">Agents to Simulate</input>
-			<input id="infectiousness" placeholder="Infectiousness: Chance to infect interactions (0-1)"></input>
-			<input id="deadlyness" placeholder="Deadlyness: Chance per day of death for infected agents."></input>
-			<input id="recovered-protection" placeholder="Recovered protection: Relative chance recovered agents are infected (0-1)"></input>
-			<input id="days-to-max-recovery" placeholder="Days to max recovery: Days after infection to maximum recovery chance"></input>
-			<input id="max-recovery-chance" placeholder="Max Recovery Chance: Maximum chance of recovery per day (0-1)"></input>
+			<input id="infectiousness" placeholder="Infectiousness (0-1)"></input>
+			<input id="deadlyness" placeholder="Deadlyness (0-1)"></input>
+			<input id="recovered-protection" placeholder="Recovered Protection (0-1)"></input>
+			<input id="days-to-max-recovery" placeholder="Days to Max Recovery (0-n)"></input>
+			<input id="max-recovery-chance" placeholder="Max Recovery (0-1)"></input>
 			<button id="apply" onclick="GC.controlPanel();">Apply Changes</button>
 		</div>
 	</body>
