--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 		<div id='control-panel'>
 			<h3>Control Panel</h3>
 			<button id="reset" onclick="GC.cities = []; GC.initCities();">Reset</button>
-			<input id="agent-count">Agents to Simulate</input>
+			<input id="agent-count" placeholder="Agents to Simulate"></input>
 			<input id="infectiousness" placeholder="Infectiousness (0-1)"></input>
 			<input id="deadlyness" placeholder="Deadlyness (0-1)"></input>
 			<input id="recovered-protection" placeholder="Recovered Protection (0-1)"></input>
