--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 		</div>
 		<div id='control-panel'>
 			<h3>Control Panel</h3>
-			<button id="reset" onclick="GC.cities = []; GC.initCities();">Reset</button>
+			<button id="reset" onclick="GC.cities = []; GC.initCities();">Reset</button><br>
 			<input id="agent-count" placeholder="Agents to Simulate"></input>
 			<input id="infectiousness" placeholder="Infectiousness (0-1)"></input>
 			<input id="deadlyness" placeholder="Deadlyness (0-1)"></input>
