--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 			<input id="agent-count" placeholder="Agents to Simulate"></input>
 			<input id="infectiousness" placeholder="Infectiousness (0-1)"></input>
 			<input id="deadlyness" placeholder="Deadlyness (0-1)"></input>
+			<input id="infected-rejected" placeholder="Infected Rejected (0-1)"></input>
 			<input id="recovered-protection" placeholder="Recovered Protection (0-1)"></input>
 			<input id="days-to-max-recovery" placeholder="Days to Max Recovery (0-n)"></input>
 			<input id="max-recovery-chance" placeholder="Max Recovery (0-1)"></input>
