--- a/index.html
+++ b/index.html
@@ -34,8 +34,10 @@
 				Deadlyness (0-1): <input id="deadlyness" value="0.01" placeholder="Deadlyness (0-1)"></input><br>
 				Infected Rejected (0-1): <input id="infected-rejected" value="0" placeholder="Infected Rejected (0-1)"></input><br>
 				Recovered Protection (0-1): <input id="recovered-protection" value="0.2" placeholder="Recovered Protection (0-1)"></input><br>
-				Days to Max Recovery (0-n): <input id="days-to-max-recovery" value="5" placeholder="Days to Max Recovery (0-n): "></input><br>
+				Days to Max Recovery (0-n): <input id="days-to-max-recovery" value="5" placeholder="Days to Max Recovery (0-n)"></input><br>
 				Max Recovery (0-1): <input id="max-recovery-chance" value="0.05" placeholder="Max Recovery (0-1)"></input><br>
+				Recovered Recovery (0-n): <input id="recovered-recovery" value="2" placeholder="Recovered Recovery (0-n)"></input><br>
+				Recovered Death Rate (0-1): <input id="recovered-death" value="0.2" placeholder="Recovered Death Rate (0-1)"></input><br>
 			</div>
 		</div>
 	</body>
