Days Recovered For

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 				Days to Max Recovery (0-n): <input id="days-to-max-recovery" value="5" placeholder="Days to Max Recovery (0-n)"></input><br>
 				Max Recovery (0-1): <input id="max-recovery-chance" value="0.05" placeholder="Max Recovery (0-1)"></input><br>
 				Recovered Recovery (0-n): <input id="recovered-recovery" value="1.4" placeholder="Recovered Recovery (0-n)"></input><br>
-				Recovered Death Rate (0-1): <input id="recovered-death" value="0.8" placeholder="Recovered Death Rate (0-1)"></input><br>
+				Recovered Days (1-n): <input id="recovered-days" value="80" placeholder="Days Recovered For (1-n)"></input><br>
 			</div>
 		</div>
 	</body>
