--- a/index.html
+++ b/index.html
@@ -20,7 +20,12 @@
 	</head>
 	<body>
 		<canvas id='canvas'></canvas>
-		<div id='left-panel'>
+		<div id='panel'>
+			<select id="panel-select">
+				<option value="Info Panel"></option>
+				<option value="Control Panel"></option>
+				<option value="Graph"></option>
+			</select>
 			<div id='info-panel'>
 				<h3>Information Panel</h3>
 				<p id="global-stats"></p>
