--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
 		<canvas id='canvas'></canvas>
 		<div id='panel'>
 			<select id="panel-select">
-				<option value="Info Panel"></option>
-				<option value="Control Panel"></option>
-				<option value="Graph"></option>
+				<option value="Info Panel">Info Panel</option>
+				<option value="Control Panel">Control Panel</option>
+				<option value="Graph">Graph</option>
 			</select>
 			<div id='info-panel'>
 				<h3>Information Panel</h3>
