Add canvas for graph

--- a/index.html
+++ b/index.html
@@ -37,12 +37,13 @@
 				Recovered Days (1-n): <input id="recovered-days" value="80" placeholder="Days Recovered For (1-n)"></input><br>
 			</div>
 			<div id='info-panel'>
+				<h3>Information Panel</h3>
 				<select id="panel-select">
 					<option value="Info Panel">Info Panel</option>
 					<option value="Graph">Graph</option>
 				</select>
-				<h3>Information Panel</h3>
-				<p id="global-stats"></p>
+				<div id="global-stats"></div>
+				<canvas id="stats-graph"></canvas>
 			</div>
 		</div>
 	</body>
