Graph will be below panel

--- a/index.html
+++ b/index.html
@@ -38,13 +38,11 @@
 			</div>
 			<div id='info-panel'>
 				<h3>Information Panel</h3>
-				<select id="panel-select">
-					<option value="Info Panel">Info Panel</option>
-					<option value="Graph">Graph</option>
-				</select>
 				<div id="global-stats"></div>
-				<canvas id="stats-graph"></canvas>
 			</div>
+		</div>
+		<div id="graph">
+			<canvas id="graph-canvas"></canvas>
 		</div>
 	</body>
 </html>
