--- a/index.html
+++ b/index.html
@@ -38,7 +38,13 @@
 			</div>
 			<div id='info-panel'>
 				<h3>Information Panel</h3>
-				<div id="global-stats"></div>
+				<div id="global-stats"></div><br>
+				<p>Graph Color Key:<br>
+					<span style="color: yellow;">YELLOW</span> = alive<br>
+					<span style="color: red;">RED</span> = infected<br>
+					<span style="color: blue;">BLUE</span> = recovered<br>
+					<span style="color: black;">BLACK</span> = dead
+				</p>
 			</div>
 		</div>
 		<div id="graph">
