--- a/index.html
+++ b/index.html
@@ -38,8 +38,9 @@
 			</div>
 			<div id='info-panel'>
 				<h3>Information Panel</h3>
-				<div id="global-stats"></div><br>
-				<p>Graph Color Key:<br>
+				<div id="global-stats"></div>
+				<p style="font-family: monospace, Arial;">
+					<strong>Graph Color Key:</strong><br>
 					<span style="color: yellow;">YELLOW</span> = alive<br>
 					<span style="color: red;">RED</span> = infected<br>
 					<span style="color: blue;">BLUE</span> = recovered<br>
