--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
 				<div id="global-stats"></div>
 				<p style="font-family: monospace, Arial;">
 					<strong>Graph Color Key:</strong><br>
-					<span style="color: yellow;">YELLOW</span> = alive<br>
-					<span style="color: red;">RED</span> = infected<br>
-					<span style="color: blue;">BLUE</span> = recovered<br>
-					<span style="color: black;">BLACK</span> = dead
+					<span style="color: yellow;">YELLOW</span> = alive,
+					<span style="color: red;"> RED</span> = infected,<br>
+					<span style="color: blue;">BLUE</span> = recovered,
+					<span style="color: black;"> BLACK</span> = dead
 				</p>
 			</div>
 		</div>
