--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 			</div>
 			<div id='info-panel'>
 				<h3>Information Panel</h3>
-				<div id="global-stats"></div>
+				<div id="global-stats"></div><br>
 				<p style="font-family: monospace, Arial;">
 					<strong>Graph Color Key:</strong><br>
 					<span style="color: yellow;">YELLOW</span> = alive,
