--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
 				<div id="global-stats"></div><br>
 				<p style="font-family: monospace, Arial;">
 					<strong>Graph Color Key:</strong><br>
-					<span style="color: yellow;">YELLOW</span> = alive,
-					<span style="color: red;"> RED</span> = infected,<br>
-					<span style="color: blue;">BLUE</span> = recovered,
-					<span style="color: black;"> BLACK</span> = dead
+					<span style="color: yellow;">YELLOW = alive</span>,
+					<span style="color: red;"> RED = infected</span>,<br>
+					<span style="color: blue;">BLUE = recovered</span>,
+					<span style="color: black;"> BLACK = dead</span>
 				</p>
 			</div>
 		</div>
