--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 					<span style="color: yellow;">YELLOW = alive</span>,
 					<span style="color: red;"> RED = infected</span>,<br>
 					<span style="color: blue;">BLUE = recovered</span>,
-					<span style="color: black;"> BLACK = dead</span>
+					<span style="color: brown;"> BROWN = dead</span>
 				</p>
 			</div>
 		</div>
