--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 				<div id="global-stats"></div><br>
 				<p style="font-family: monospace, Arial;">
 					<strong>Graph Color Key:</strong><br>
-					<span style="color: yellow;">YELLOW = alive</span>,
+					<span style="color: green;">GREEN = alive</span>,
 					<span style="color: red;"> RED = infected</span>,<br>
 					<span style="color: blue;">BLUE = recovered</span>,
 					<span style="color: brown;"> BROWN = dead</span>
