--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 				Recovered Recovery (0-n): <input id="recovered-recovery" value="1.4" placeholder="Recovered Recovery (0-n)"></input><br>
 				Recovered Death Rate (0-1): <input id="recovered-death" value="0.8" placeholder="Recovered Death Rate (0-1)"></input><br>
 				Recovered Days (1-n): <input id="recovered-days" value="80" placeholder="Days Recovered For (1-n)"></input><br>
+				Days Graphed (1-n): <input id="days-graphed" value="3000" placeholder="Days Graphed (1-n)"></input><br>
 			</div>
 			<div id='info-panel'>
 				<h3>Information Panel</h3>
