--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		<div id='panel'>
 			<div id='control-panel'>
 				<h3>Control Panel</h3>
-				<button id="reset" onclick="GC.cities = []; GC.initCities();">Reset</button>
+				<button id="reset" onclick="GC.reset();">Reset</button>
 				<button id="apply" onclick="GC.controlPanel();">Apply Changes</button><br>
 				Agent Count: <input id="agent-count" value="4000" placeholder="Agent Count"></input><br>
 				Infectiousness (0-1): <input id="infectiousness" value="0.004" placeholder="Infectiousness (0-1)"></input><br>
