--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
 				Days Graphed (1-n): <input id="days-graphed" value="3000" placeholder="Days Graphed (1-n)"></input><br>
 			</div>
 			<div id='info-panel'>
-				<h3>Information Panel</h3>
+				<h3>Information Panel</h3><br>
+				<h6>Click on a city to infect an agent.</h6>
 				<div id="global-stats"></div><br>
 				<p style="font-family: monospace, Arial;">
 					<strong>Graph Color Key:</strong><br>
