--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		<canvas id='canvas'></canvas>
 		<div id='panel'>
 			<div id='control-panel'>
-				<h3>Control Panel</h3>
+				<h2>Control Panel</h2>
 				<button id="reset" onclick="GC.reset();">Reset</button>
 				<button id="apply" onclick="GC.controlPanel();">Apply Changes</button><br>
 				Agent Count: <input id="agent-count" value="4000" placeholder="Agent Count"></input><br>
@@ -38,8 +38,8 @@
 				Days Graphed (1-n): <input id="days-graphed" value="3000" placeholder="Days Graphed (1-n)"></input><br>
 			</div>
 			<div id='info-panel'>
-				<h3>Information Panel</h3><br>
-				<h6>Click on a city to infect an agent.</h6>
+				<h2>Information Panel</h2>
+				<h4>Click on a city to infect an agent.</h4>
 				<div id="global-stats"></div><br>
 				<p style="font-family: monospace, Arial;">
 					<strong>Graph Color Key:</strong><br>
