--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
 				Days Graphed (1-n): <input id="days-graphed" value="3000" placeholder="Days Graphed (1-n)"></input><br>
 			</div>
 			<div id='info-panel'>
-				<h2>Information Panel</h2>
-				<h4>Click on a city to infect an agent.</h4>
+				<h2>Information Panel</h2><br>
+				<h4>Click on a city to infect an agent.</h4><br>
 				<div id="global-stats"></div><br>
 				<p style="font-family: monospace, Arial;">
 					<strong>Graph Color Key:</strong><br>
