--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 			</div>
 			<div id='info-panel'>
 				<h2>Information Panel</h2><br>
-				<h4>Click on a city to infect an agent.</h4><br>
+				<h4 style="font-family: monospace, Arial;">Click on a city to infect an agent.</h4><br>
 				<div id="global-stats"></div><br>
 				<p style="font-family: monospace, Arial;">
 					<strong>Graph Color Key:</strong><br>
