--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 				<h2>Control Panel</h2>
 				<button id="reset" onclick="GC.reset();">Reset</button>
 				<button id="apply" onclick="GC.controlPanel();">Apply Changes</button><br>
+				<button id="display-button" onclick="display = !display;">Disable Display</button><br>
 				Fast Forward (0-n): <input id="fast-forward" value="1" placeholder="Fast Forward Multiplier"></input><br>
 				Agent Count: <input id="agent-count" value="4000" placeholder="Agent Count"></input><br>
 				Infectiousness (0-1): <input id="infectiousness" value="0.004" placeholder="Infectiousness (0-1)"></input><br>
