Fix: Spelling Error

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 				Fast Forward (0-n): <input id="fast-forward" value="1" placeholder="Fast Forward Multiplier"></input><br>
 				Agent Count: <input id="agent-count" value="4000" placeholder="Agent Count"></input><br>
 				Infectiousness (0-1): <input id="infectiousness" value="0.004" placeholder="Infectiousness (0-1)"></input><br>
-				Deadlyness (0-1): <input id="deadlyness" value="0.001" placeholder="Deadlyness (0-1)"></input><br>
+				Deadliness (0-1): <input id="deadlyness" value="0.001" placeholder="Deadlyness (0-1)"></input><br>
 				Infected Rejected (0-1): <input id="infected-rejected" value="0.1" placeholder="Infected Rejected (0-1)"></input><br>
 				Recovered Protection (0-1): <input id="recovered-protection" value="0.8" placeholder="Recovered Protection (0-1)"></input><br>
 				Days to Max Recovery (0-n): <input id="days-to-max-recovery" value="5" placeholder="Days to Max Recovery (0-n)"></input><br>
