Agent View Button
Switch between agent view and city view: displaying agents or displaying cities.

--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
 				<h2>Control Panel</h2>
 				<button id="reset" onclick="GC.reset();">Reset</button>
 				<button id="apply" onclick="GC.controlPanel();">Apply Changes</button>
-				<button id="display-button" onclick="display = !display;">Toggle Display</button><br>
+				<button id="display-button" onclick="display = !display;">Toggle Display</button>
+				<button id="agent-view-button" onclick="agentView = !agentView;">Toggle Agent View</button><br>
 				Fast Forward (0-n): <input id="fast-forward" value="1" placeholder="Fast Forward Multiplier"></input><br>
 				Agent Count: <input id="agent-count" value="4000" placeholder="Agent Count"></input><br>
 				Infectiousness (0-1): <input id="infectiousness" value="0.004" placeholder="Infectiousness (0-1)"></input><br>
